Tue Apr 22 12:39:23 2003  Chad Elliott  <elliott_c@ociweb.com>

	* tao/Messaging/Messaging_No_ImplC.h:

          Moved the #undef of TRANSPARENT after the #include's to ensure
          that it doesn't get defined again after it's already been
          #undef'ed.

Tue Apr 22 12:35:44 2003  Simon McQueen  <sm@prismtechnologies.com>

	* tests/Collocation_Tests/Collocation_Test.dsp:
	  Fixed test run errors.

Mon Apr 21 14:20:00 2003  Irfan Pyarali  <irfan@oomworks.com>

	* tests\RTCORBA\Profile_And_Endpoint_Selection\client.cpp:   

	  Removed extra ACE_CHECK_RETURN.

	* tests\RTCORBA\check_supported_priorities.cpp: 

	  Initialized <name> in sched_policy_name().
	
	* tests\POA\Nested_Non_Servant_Upcalls\Nested_Non_Servant_Upcalls.cpp: 

	  - Removed unused <servant_activation_succeeded>.

	  - Changed a couple of ACE_CHECKs to ACE_CHECK_RETURNs.

Sun Apr 20 07:55:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Bug_1020_Basic_Regression/Bug_1020_Basic_Regression.dsw:
	* tests/Bug_1020_Basic_Regression/client.dsp:
	* tests/Bug_1020_Basic_Regression/server.dsp: Removed them from
	  the repo. They dont compile with VC6.0 and spoils our daily
	  builds.

Sun Apr 20 07:50:47 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Bug_1020_Regression/Bug_1020_Regression.dsw:
	* tests/Bug_1020_Regression/client.dsp:
	* tests/Bug_1020_Regression/server.dsp: Removed them from the
	  repo. They dont compile with VC6.0 and spoils our daily builds. 

Fri Apr 18 18:13:20 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/y.tab.cpp:
        * TAO_IDL/fe/idl.yy:

          Modified the error checking for local interface used as
          operation parameter to disable the diagnostic if the
          operation is defined in a valuetype. Since operations
          in valuetypes are executed locally, the arguments are
          not marshaled and there is no problem with a local
          interface parameter. Thanks to Proum Chauk-Mean 